--- a/hw-01/HW-01_GitPracticeDebuggingPythonPackagesAndClasses-STUDENT.ipynb
+++ b/hw-01/HW-01_GitPracticeDebuggingPythonPackagesAndClasses-STUDENT.ipynb
@@ -965,21 +965,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16\n"
+      "         length  horsepower\n",
+      "32   199.600006       176.0\n",
+      "48   180.300003       155.0\n",
+      "71   181.699997       152.0\n",
+      "72   184.600006       152.0\n",
+      "73   184.600006       152.0\n",
+      "74   170.699997       160.0\n",
+      "75   170.699997       200.0\n",
+      "76   178.500000       160.0\n",
+      "95   186.600006       160.0\n",
+      "96   186.600006       160.0\n",
+      "137  183.500000       161.0\n",
+      "138  183.500000       161.0\n",
+      "139  187.800003       156.0\n",
+      "152  188.800003       162.0\n",
+      "153  188.800003       162.0\n",
+      "155  188.800003       160.0\n",
+      "total: 16\n"
      ]
     }
    ],
    "source": [
     "mask = new_df[\"horsepower\"] > 150\n",
     "vals_masked = new_df[mask]\n",
-    "print(len(vals_masked))"
+    "print(vals_masked)\n",
+    "print(\"total:\", len(vals_masked))"
    ]
   },
   {
@@ -1035,11 +1053,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Put code here"
+    "#pip install pillow"
    ]
   },
   {
@@ -1051,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,11 +1087,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Put your code here\n"
+    "### Put your code here\n",
+    "from PIL import Image\n",
+    "im = Image.open(\"logo.png\")"
    ]
   },
   {
@@ -1085,11 +1105,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Put your code here\n"
+    "### Put your code here\n",
+    "im_rotate = im.rotate(90)"
    ]
   },
   {
@@ -1101,11 +1122,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Put your code here\n"
+    "### Put your code here\n",
+    "im_rotate.save(\"logo_rotate.png\")"
    ]
   },
   {
@@ -1121,7 +1143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Put your code here"
+    "### I just add, commit"
    ]
   },
   {
