--- a/hw-01/HW-01_GitPracticeDebuggingPythonPackagesAndClasses-STUDENT.ipynb
+++ b/hw-01/HW-01_GitPracticeDebuggingPythonPackagesAndClasses-STUDENT.ipynb
@@ -1139,11 +1139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### I just add, commit"
+    "### I just add, commit, and push the changes to the entire 'hw-01' file each time.\n",
+    "\n",
+    "# git add .\n",
+    "# git commit \"added HW-01 file and notebook to turn-in directory\"\n",
+    "# git push"
    ]
   },
   {
@@ -1234,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,16 +1257,24 @@
     "        self.drop_time=None\n",
     "        self.pick_time=None\n",
     "        \n",
-    "    def checkin(self, person_name, pet_name,):\n",
+    "    def checkin(self, person_name, pet_name, pet_weight, drop_time):\n",
     "        self.person_name = person_name\n",
     "        self.pet_name = pet_name\n",
+    "        self.pet_weight = pet_weight\n",
+    "        self.drop_time = drop_time\n",
     "        \n",
-    "        print(self.person_name, \"checked in with \", self.pet_name, \"at \", self.drop_time, \". The pet weighs \",self.pet_weight, \"at dropoff\")\n",
+    "        print(self.person_name, \"checked in with \", self.pet_name, \"at \", self.drop_time, \". The pet weighs \",\n",
+    "              self.pet_weight, \"at dropoff\")\n",
     "        \n",
-    "    def checkout():\n",
-    "        pass\n",
+    "    def checkout(self, cost, pick_time, review):\n",
+    "        self.cost = cost\n",
+    "        self.pick_time = pick_time\n",
+    "        self.review = review\n",
+    "\n",
+    "        print(self.pet_name, \"was successfully groomed and picked up at\", self.pick_time, \". The total cost was\", \n",
+    "              self.cost, \"and the service was rated\", self.review)\n",
     "    \n",
-    "    def receipt():\n",
+    "    def receipt(self):\n",
     "        print(\" Name: \", self.person_name,\n",
     "              \"\\n Pet: \", self.pet_name,\n",
     "              \"\\n Weight: \", self.pet_weight,\n",
@@ -1281,9 +1293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bob checked in with  R2D2 at  3PM . The pet weighs  500lbs at dropoff\n"
+     ]
+    }
+   ],
    "source": [
     "## DO NOT CHANGE THIS CELL ##\n",
     "\n",
@@ -1301,11 +1321,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anderdingus checked in with  Chewbacca at  10AM . The pet weighs  750lbs at dropoff\n"
+     ]
+    }
+   ],
    "source": [
-    "# Put exploratory code here, if needed\n"
+    "# Put exploratory code here, if needed\n",
+    "test2 = PetStoreTransaction()\n",
+    "test2.checkin(\"Anderdingus\", \"Chewbacca\", \"750lbs\", \"10AM\")"
    ]
   },
   {
@@ -1317,12 +1347,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2D2 was successfully groomed and picked up at 4PM . The total cost was $499 and the service was rated 8/10\n"
+     ]
+    }
+   ],
    "source": [
     "# Put your code here\n",
-    "\n"
+    "test1.checkout(\"$499\", \"4PM\", \"8/10\")"
    ]
   },
   {
@@ -1334,9 +1372,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Name:  Bob \n",
+      " Pet:  R2D2 \n",
+      " Weight:  500lbs \n",
+      " Cost:  $499 \n",
+      " Drop-off time:  3PM \n",
+      " Pick-up time:  4PM \n",
+      " Review:  8/10\n"
+     ]
+    }
+   ],
    "source": [
     "## DO NOT CHANGE THIS CELL ##\n",
     "\n",
@@ -1349,7 +1401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Write what you fixed here**"
+    "**In the python class, I had to make the \"receipt()\" function include the argument \"self\" so it knew to print the arguments for itself. I had the line to \"def receipt(self):\"**"
    ]
   },
   {
@@ -1370,11 +1422,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thomas checked in with  Daisy at  11AM . The pet weighs  35lbs at dropoff\n",
+      "Daisy was successfully groomed and picked up at 3:30PM . The total cost was $275 and the service was rated 7/10\n",
+      " Name:  Thomas \n",
+      " Pet:  Daisy \n",
+      " Weight:  35lbs \n",
+      " Cost:  $275 \n",
+      " Drop-off time:  11AM \n",
+      " Pick-up time:  3:30PM \n",
+      " Review:  7/10\n"
+     ]
+    }
+   ],
    "source": [
-    "### Put your code here\n"
+    "### Put your code here\n",
+    "transaction1 = PetStoreTransaction()\n",
+    "transaction1.checkin(\"Thomas\", \"Daisy\", \"35lbs\", \"11AM\")\n",
+    "transaction1.checkout(\"$275\", \"3:30PM\", \"7/10\")\n",
+    "transaction1.receipt()"
    ]
   },
   {
@@ -1404,7 +1476,7 @@
     "**Question 5.2 (2 points):** Finally, push your repository to GitHub so that all of the commits that you have been making along the way show up on GitHub.\n",
     "\n",
     "```bash\n",
-    "# Put the command you used to push to GitHub here\n",
+    "# (base) marshja6@io:~/CMSE202-f25-turnin/hw-01$ git push\n",
     "```\n",
     "\n",
     "**NOTE:** The grader will be able to see your commit messages and whether you pushed the repo at this stage, if everything has gone as planned. Double-check that things look correct on **GitHub** before you submit this notebook to **D2L**.\n"
