Part 5: Writing Python code using different programming paradigms

--- a/midterm/CMSE202-Midterm-Section004-F25-STUDENT.ipynb
+++ b/midterm/CMSE202-Midterm-Section004-F25-STUDENT.ipynb
@@ -974,14 +974,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "4c321a9f-e981-4657-ad7a-c83eaa777bdb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 7, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [1, 2, 3]\n",
     "value = 5\n",
-    "# Your code here."
+    "# Your code here.\n",
+    "new_values = []\n",
+    "for i in range(len(numbers)):\n",
+    "    new_number = numbers[i] + value\n",
+    "    new_values.append(new_number)\n",
+    "print(new_values)"
    ]
   },
   {
@@ -994,13 +1007,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "647cf0e9-9009-4cda-909c-0aa8107dff4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 7, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "def add_value(numbers, value):\n",
-    "    pass  # Your code here."
+    "    new_values = []\n",
+    "    for i in range(len(numbers)):\n",
+    "        new_number = numbers[i] + value\n",
+    "        new_values.append(new_number)\n",
+    "    return print(new_values)\n",
+    "\n",
+    "add_value(numbers, value)"
    ]
   },
   {
@@ -1013,10 +1040,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "06556500-bcd9-4f3e-8b26-92fd4db2b945",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 7, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "class ListOfNumbers:\n",
     "    def __init__(self, numbers):\n",
@@ -1025,7 +1060,8 @@
     "        Args:\n",
     "            numbers (list[int]): A list of numbers to store as an attribute in the class.\n",
     "        \"\"\"\n",
-    "        pass  # Your code here.\n",
+    "        self.numbers = numbers\n",
+    "        \n",
     "\n",
     "    def add_value(self, value):\n",
     "        \"\"\"Adds the value to every number in the numbers attribute, modifying numbers and returning nothing.\n",
@@ -1033,7 +1069,14 @@
     "        Args:\n",
     "            value (int): The value to add to each number.\n",
     "        \"\"\"\n",
-    "        pass  # Your code here."
+    "        new_values = []\n",
+    "        for i in range(len(numbers)):\n",
+    "            new_number = numbers[i] + value\n",
+    "            new_values.append(new_number)\n",
+    "        return print(new_values)\n",
+    "\n",
+    "number_list = ListOfNumbers(numbers)\n",
+    "number_list.add_value(value)"
    ]
   },
   {
@@ -1049,7 +1092,11 @@
    "id": "5e8e38cf-1f3c-4711-b90a-227424e39219",
    "metadata": {},
    "source": [
-    "Your answer here."
+    "The advantage of using linear programming is that there is less setup involved and you can get right into coding. With the other paradigms, you must create functions or classes, so linear programming is advantageous in this way. The downside of using linear programming is that it's far less reusable than the other paradigms. In order to do the same operation again, you'd have to copy and paste all of that code rather than just calling on the same function or class as before.\n",
+    "\n",
+    "The advantage of using functional programming is that defining and calling on a function is very easy and doesn't take a lot of setup, so you're able to code quickly while also ensuring that you code is reusable later on. It's also simple understand and interpret for other people that may be looking at your code. The only disadvantage of functional programming is that it's more difficult to use the functions to alter one variable than if you were to create a class and assign it to a variable.\n",
+    "\n",
+    "The advantage of using object-oriented programming is that it makes it very easy to call on commands and to alter a variable that you've assigned a class to. By just calling on the functions you defined earlier, the descriptors of the variable can change very easily. You can also reuse this class code between projects because it defines everything that it needs right in the code."
    ]
   },
   {
